src/parser/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() {
    this.constructor = child;
  }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message;
  this.expected = expected;
  this.found = found;
  this.location = location;
  this.name = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function (expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"';
    },

    class: function (expectation) {
      var escapedParts = "",
        i;

      for (i = 0; i < expectation.parts.length; i++) {
        escapedParts +=
          expectation.parts[i] instanceof Array
            ? classEscape(expectation.parts[i][0]) +
              "-" +
              classEscape(expectation.parts[i][1])
            : classEscape(expectation.parts[i]);
      }

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function (expectation) {
      return "any character";
    },

    end: function (expectation) {
      return "end of input";
    },

    other: function (expectation) {
      return expectation.description;
    },
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g, '\\"')
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g, function (ch) {
        return "\\x0" + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return "\\x" + hex(ch);
      });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g, "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g, function (ch) {
        return "\\x0" + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return "\\x" + hex(ch);
      });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
      i,
      j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return (
          descriptions.slice(0, -1).join(", ") +
          ", or " +
          descriptions[descriptions.length - 1]
        );
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : "end of input";
  }

  return (
    "Expected " +
    describeExpected(expected) +
    " but " +
    describeFound(found) +
    " found."
  );
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},
    peg$startRuleFunctions = { Start: peg$parseStart },
    peg$startRuleFunction = peg$parseStart,
    peg$c0 = function (exps) {
      return exps;
    },
    peg$c1 = function (head, tail) {
      return new ProgramNode(buildList(head, tail, 1));
    },
    peg$c2 = "Schemas",
    peg$c3 = peg$literalExpectation("Schemas", false),
    peg$c4 = "{",
    peg$c5 = peg$literalExpectation("{", false),
    peg$c6 = "}",
    peg$c7 = peg$literalExpectation("}", false),
    peg$c8 = function (objs) {
      return {
        type: "SchemasBlockExpression",
        body: objs,
      };
    },
    peg$c9 = function (name, obj) {
      _schemas[name] = obj;
      ProgramNode.schemas = _schemas;

      return {
        type: "SchemaExpression",
        name,
        body: obj,
      };
    },
    peg$c10 = " ",
    peg$c11 = peg$literalExpectation(" ", false),
    peg$c12 = "extends",
    peg$c13 = peg$literalExpectation("extends", false),
    peg$c14 = function (name, extName, obj) {
      _schemas[name] = obj;
      ProgramNode.prototype.schemas = _schemas;

      return {
        type: "SchemaExpression",
        extend: extName,
        name,
        body: obj,
      };
    },
    peg$c15 = ",",
    peg$c16 = peg$literalExpectation(",", false),
    peg$c17 = function (head, tail) {
      return buildList(head, tail, 3);
    },
    peg$c18 = "RequestBodies",
    peg$c19 = peg$literalExpectation("RequestBodies", false),
    peg$c20 = function (objs) {
      return {
        type: "RequestBodiesBlockExpression",
        body: objs,
      };
    },
    peg$c21 = function (name, obj) {
      _requestBodies[name] = obj;
      ProgramNode.prototype.requestBodies = _requestBodies;

      return {
        type: "RequestBodyExpression",
        name,
        body: obj,
      };
    },
    peg$c22 = function (name, extName, obj) {
      _schemas[name] = obj;
      ProgramNode.prototype.schemas = _schemas;

      return {
        type: "RequestBodyExpression",
        extend: extName,
        name,
        body: obj,
      };
    },
    peg$c23 = "Parameters",
    peg$c24 = peg$literalExpectation("Parameters", false),
    peg$c25 = function (objs) {
      return {
        type: "ParametersBlockExpression",
        body: objs,
      };
    },
    peg$c26 = function (name, obj) {
      _parameters[name] = obj;
      ProgramNode.prototype.parameters = _parameters;

      return {
        type: "ParameterExpression",
        name,
        body: obj,
      };
    },
    peg$c27 = "Paths",
    peg$c28 = peg$literalExpectation("Paths", false),
    peg$c29 = function (exps) {
      return {
        type: "PathsBlockExpression",
        body: exps,
      };
    },
    peg$c30 = function (head, tail) {
      return buildList(head, tail, 1);
    },
    peg$c31 = function (endpoint, tag, methods) {
      const method = {
        type: "PathExpression",
        endpoint,
        tag,
        methods,
      };

      _paths[endpoint] = method;
      ProgramNode.prototype.paths = _paths;

      return method;
    },
    peg$c32 = function (name, body) {
      return {
        type: "MethodExpression",
        name,
        body,
      };
    },
    peg$c33 = function (properties) {
      return {
        type: "MethodBodyObjectExpression",
        properties: optionalList(properties),
      };
    },
    peg$c34 = function (head, tail) {
      return buildList(head, tail, 2);
    },
    peg$c35 = "description",
    peg$c36 = peg$literalExpectation("description", false),
    peg$c37 = ":",
    peg$c38 = peg$literalExpectation(":", false),
    peg$c39 = function (key, value) {
      return {
        type: "Property",
        key: {
          type: "IdentifierExpression",
          name: key,
        },
        value,
      };
    },
    peg$c40 = "requestBody",
    peg$c41 = peg$literalExpectation("requestBody", false),
    peg$c42 = function (value) {
      return {
        type: "MethodRequestBodyExpression",
        value,
      };
    },
    peg$c43 = "responses",
    peg$c44 = peg$literalExpectation("responses", false),
    peg$c45 = function (value) {
      return {
        type: "MethodResponseExpression",
        value,
      };
    },
    peg$c46 = function (properties) {
      return {
        type: "ResponseObjectExpression",
        properties: optionalList(properties),
      };
    },
    peg$c47 = /^[0-9]/,
    peg$c48 = peg$classExpectation([["0", "9"]], false, false),
    peg$c49 = function (name, obj) {
      return {
        type: "ResponseObjectMemberExpression",
        key: {
          type: "Literal",
          name,
        },
        value: obj,
      };
    },
    peg$c50 = "post",
    peg$c51 = peg$literalExpectation("post", false),
    peg$c52 = "get",
    peg$c53 = peg$literalExpectation("get", false),
    peg$c54 = "put",
    peg$c55 = peg$literalExpectation("put", false),
    peg$c56 = "patch",
    peg$c57 = peg$literalExpectation("patch", false),
    peg$c58 = "delete",
    peg$c59 = peg$literalExpectation("delete", false),
    peg$c60 = /^[\-_a-z0-9?\/]/i,
    peg$c61 = peg$classExpectation(
      ["-", "_", ["a", "z"], ["0", "9"], "?", "/"],
      false,
      true
    ),
    peg$c62 = function (endpoint) {
      return endpoint;
    },
    peg$c63 = "(",
    peg$c64 = peg$literalExpectation("(", false),
    peg$c65 = /^[a-z]/i,
    peg$c66 = peg$classExpectation([["a", "z"]], false, true),
    peg$c67 = ")",
    peg$c68 = peg$literalExpectation(")", false),
    peg$c69 = function (tag) {
      return tag;
    },
    peg$c70 = function (props) {
      const requiredProps =
        props !== null && Array.isArray(props)
          ? props
              .filter((prop) => !prop.optional && !prop.allowAdditional)
              .map((prop) => prop.key.name)
          : [];
      const allowAdditional =
        props !== null && Array.isArray(props)
          ? props.some((prop) => prop.allowAdditional)
          : false;
      return {
        type: "ObjectExpression",
        ...(requiredProps.length ? { required: requiredProps } : {}),
        ...(allowAdditional ? { allowAdditional } : {}),
        properties: optionalList(props),
      };
    },
    peg$c71 = function (head, tail) {
      return buildList(head, tail, 3);
    },
    peg$c72 = "?",
    peg$c73 = peg$literalExpectation("?", false),
    peg$c74 = function (key, optional, value) {
      return {
        type: "Property",
        optional: optional ? true : false,
        key,
        value,
      };
    },
    peg$c75 = "[",
    peg$c76 = peg$literalExpectation("[", false),
    peg$c77 = "]",
    peg$c78 = peg$literalExpectation("]", false),
    peg$c79 = function (key, value) {
      return {
        type: "Property",
        allowAdditional: true,
        key: key[2],
        value,
      };
    },
    peg$c80 = ".",
    peg$c81 = peg$literalExpectation(".", false),
    peg$c82 = /^[.%\^&*(@!#)]/,
    peg$c83 = peg$classExpectation(
      [".", "%", "^", "&", "*", "(", "@", "!", "#", ")"],
      false,
      false
    ),
    peg$c84 = function (obj, keys) {
      return {
        type: "PropertyAccessExpression",
        list: buildList(obj, keys, 3),
      };
    },
    peg$c85 = "[]",
    peg$c86 = peg$literalExpectation("[]", false),
    peg$c87 = function (initialBlock) {
      return {
        ...initialBlock,
        repeater: "array",
      };
    },
    peg$c88 = function (args) {
      return {
        type: "ArrayExpression",
        elements: optionalList(args),
      };
    },
    peg$c89 = function (callee, args) {
      return {
        type: "CallExpression",
        callee,
        arguments: optionalList(args),
      };
    },
    peg$c90 = "/*",
    peg$c91 = peg$literalExpectation("/*", false),
    peg$c92 = "*/",
    peg$c93 = peg$literalExpectation("*/", false),
    peg$c94 = function (comment) {
      _comments.push({
        type: "MultilineCommentExpression",
        value: comment.trim(),
        location: location(),
      });
      ProgramNode.prototype.comments = _comments;
    },
    peg$c95 = /^[_a-zA-Z]/,
    peg$c96 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false),
    peg$c97 = /^[_a-zA-Z0-9]/,
    peg$c98 = peg$classExpectation(
      ["_", ["a", "z"], ["A", "Z"], ["0", "9"]],
      false,
      false
    ),
    peg$c99 = function (name) {
      return {
        type: "IdentifierExpression",
        name,
      };
    },
    peg$c100 = function (value) {
      return {
        type: "Number",
        value: Number(value),
      };
    },
    peg$c101 = function (value) {
      return {
        type: "Literal",
        value,
      };
    },
    peg$c102 = '"',
    peg$c103 = peg$literalExpectation('"', false),
    peg$c104 = function (chars) {
      return chars;
    },
    peg$c105 = "'",
    peg$c106 = peg$literalExpectation("'", false),
    peg$c107 = "\\",
    peg$c108 = peg$literalExpectation("\\", false),
    peg$c109 = function () {
      return text();
    },
    peg$c110 = /^[\n\r\u2028\u2029]/,
    peg$c111 = peg$classExpectation(
      ["\n", "\r", "\u2028", "\u2029"],
      false,
      false
    ),
    peg$c112 = peg$anyExpectation(),
    peg$c113 = peg$otherExpectation("whitespace"),
    peg$c114 = "\t",
    peg$c115 = peg$literalExpectation("\t", false),
    peg$c116 = "\x0B",
    peg$c117 = peg$literalExpectation("\x0B", false),
    peg$c118 = "\f",
    peg$c119 = peg$literalExpectation("\f", false),
    peg$c120 = "\n",
    peg$c121 = peg$literalExpectation("\n", false),
    peg$c122 = "\xA0",
    peg$c123 = peg$literalExpectation("\xA0", false),
    peg$c124 = "\uFEFF",
    peg$c125 = peg$literalExpectation("\uFEFF", false),
    peg$currPos = 0,
    peg$savedPos = 0,
    peg$posDetailsCache = [{ line: 1, column: 1 }],
    peg$maxFailPos = 0,
    peg$maxFailExpected = [],
    peg$silentFails = 0,
    peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        "Can't start parsing from rule \"" + options.startRule + '".'
      );
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location =
      location !== void 0
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location =
      location !== void 0
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return {
      type: "class",
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos],
      p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
      endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExpressionList();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExpressionList() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseExpression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseExpression();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s4 = [s4, s5, s6];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseExpression();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExpression() {
    var s0;

    s0 = peg$parseSchemasBlockExpression();
    if (s0 === peg$FAILED) {
      s0 = peg$parseRequestBodiesBlockExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseParametersBlockExpression();
        if (s0 === peg$FAILED) {
          s0 = peg$parsePathsBlockExpression();
        }
      }
    }

    return s0;
  }

  function peg$parseSchemasBlockExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c2) {
        s2 = peg$c2;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c3);
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 123) {
            s4 = peg$c4;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c5);
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parseSchemaExpression();
              if (s7 === peg$FAILED) {
                s7 = peg$parseExtendableSchemaExpression();
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseSchemaExpression();
                if (s7 === peg$FAILED) {
                  s7 = peg$parseExtendableSchemaExpression();
                }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s8 = peg$c6;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) {
                      peg$fail(peg$c7);
                    }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parse_();
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c8(s6);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSchemaExpression() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseIdentifier();
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseObjectExpression();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExtendableSchemaExpression() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseIdentifier();
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 32) {
        s2 = peg$c10;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c11);
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c12) {
          s3 = peg$c12;
          peg$currPos += 7;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$c13);
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseExtendableSchemaList();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseObjectExpression();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c14(s1, s5, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExtendableSchemaList() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
